--- a/client/public/css/default.css
+++ b/client/public/css/default.css
@@ -1,8 +1,8 @@
 html,
 body {
-    background: #fff;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  background-color: #fff;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
