--- a/client/public/css/loginStyle.css
+++ b/client/public/css/loginStyle.css
@@ -1,96 +1,126 @@
+html {
+  font-family: "Montserrat", sans-serif;
+}
+body {
+  position: relative;
+  min-height: 100vh;
+  background-color: hsla(256, 83%, 73%, 1);
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  padding: 0 16px;
+  overflow: hidden;
+}
+
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  html {
-    font-family: "Montserrat", sans-serif;
-  }
-  body {
-    background: #8b558d;
-    background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
-    padding: 0 16px;
-  }
-  
-  header {
-    background-color: #8b558d;
-    margin: auto -16px;
-    padding: 16px 32px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-  }
-  
-  header h1 {
-    color: #fff;
-    font-family: "McLaren", cursive;
-    font-weight: 200;
-  }
-  
-  footer {
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
-  }
-  
-  footer p {
-    color: #ccc;
-  }
-  form.create-note h1 {
-    font-size: 1.1em;
-    margin-bottom: 20px;
-  }
-  form.create-note p {
-    font-size: 1.1em;
-    margin-bottom: 2px;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-  }
-  form.create-note {
-    position: relative;
-    width: 480px;
-    margin: 100px auto 20px auto;
-    background: #fff;
-    padding: 15px;
-    border-radius: 7px;
-    box-shadow: 0 1px 5px rgb(138, 137, 137);
-  }
-  form.create-note input,
-  form.create-note textarea {
-    width:80%;
-    border: none;
-    padding: 10px;
-    outline: none;
-    font-size: 1.2em;
-    font-family: inherit;
-    resize: none;
-  }
-  form.create-note .submit-button {
-    position: absolute;
-    right: 18px;
-    bottom: -18px;
-    background: #f5ba13;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
-    outline: none;
-  }
-  form.create-note button {
-    position: relative;
-    width: 60px;
-    margin: 5px;
-    background: #f5ba13;
-    color: white;
-    border-radius: 7px;
-    box-shadow: 0 1px 5px rgb(138, 137, 137);
-  }
-  form.create-note .error{
-      color: red;
-  }
-  .expand-form{
-        color:rgb(41, 70, 97);
-    }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.form-container {
+  overflow: hidden;
+}
+
+header {
+  text-align: center;
+  background-color: transparent;
+  margin: auto -16px;
+  padding: 16px 32px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+header h1 {
+  color: #fff;
+  font-family: "Lobster", cursive;
+  font-weight: 300;
+}
+
+footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+footer p {
+  color: white;
+}
+form.create-note {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  width: 450px;
+  height: 300px;
+  margin: 100px auto 20px auto;
+  background: white;
+  padding: 40px;
+  border-radius: 7px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
+  transition: height 0.5s ease;
+}
+
+form#login.create-note {
+  height: 300px;
+}
+form#register.create-note {
+  height: 500px;
+}
+
+form.create-note h1 {
+  font-family: Lato, cursive, sans-serif;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 600;
+}
+form.create-note p {
+  font-size: 1.1em;
+  margin-bottom: 2px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+form.create-note input,
+form.create-note textarea {
+  border-radius: 1.25rem;
+  width: 80%;
+  border: 0.1px solid #ccc;
+  padding: 10px;
+  outline: none;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: none;
+}
+form.create-note .submit-button {
+  position: absolute;
+  right: 18px;
+  bottom: -18px;
+  background: #f5ba13;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
+}
+form.create-note button {
+  position: relative;
+  width: 60px;
+  margin: 5px;
+  background: #f5ba13;
+  color: white;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+.no-error {
+  display: none;
+}
+.error {
+  display: block;
+  color: red;
+}
+.expand-form {
+  cursor: pointer;
+  text-decoration: underline;
+}
